<resources>
    <string name="app_name">Covid 19 vaccine App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Statistics of vaccinators \n covid-19 around the world</string>
    <string name="daily_n_vaccinations">Daily \n Vaccinations</string>
    <string name="people_fully_vaccinated">People Fully \nVaccinated</string>
    <string name="get_vaccination">Get Vaccination \n and Protect Yourself</string>
    <string name="covid_19">Covid-19</string>
    <string name="whatIsCovid">Coronaviruses are a large family of enveloped, non-segmented, single-stranded, positive-sense RNA viruses that circulate among animals including camels, cats, and bats. Coronaviruses derive their name from their electron microscopic image, which resembles a crown – or corona</string>
    <string name="coronaInfo">Six strains of coronavirus have infected humans, four of which are together responsible for about one-third of common colds. In the past two decades, there have been three global coronavirus outbreaks (1). Severe Acute Respiratory Syndrome (SARS), caused by a coronavirus termed SARS-CoV, started in 2003 in Guangdong, China, and spread to many countries in southeast Asia, North America, Europe, and South Africa. Bats are the natural hosts of SARS-CoV; its intermediate hosts are palm civets and raccoon dogs. Early cases of SARS were linked to human and animal contact at live game markets. Transmission occurred person-to-person through droplets produced by coughing or sneezing, via personal contact, and by touching contaminated surfaces. In SARS, peak viral shedding occurs approximately 10 days after the onset of illness, when many patients are hospitalized, which explains why health care professionals have a particularly high risk of becoming infected. SARS-CoV has a R0 of 4, meaning that each infected person spreads the disease to an average of four others, and a case fatality rate of 9.5 percent. Although the virus infected 8,069 persons and caused 774 deaths, the last known case of SARS was detected in September 2003.</string>
    <string name="Paragraph1">Equitable access to safe and effective vaccines is critical to ending the COVID-19 pandemic, so it is hugely encouraging to see so many vaccines proving and going into development. WHO is working tirelessly with partners to develop, manufacture and deploy safe and effective vaccines.</string>
    <string name="Paragraph2">Safe and effective vaccines are a game-changing tool: but for the foreseeable future we must continue wearing masks, cleaning our hands, ensuring good ventilation indoors, physically distancing and avoiding crowds.\n \nBeing vaccinated does not mean that we can throw caution to the wind and put ourselves and others at risk, particularly because research is still ongoing into how much vaccines protect not only against disease but also against infection and transmission.</string>
    <string name="Paragraph3">See <a href="https://www.who.int/publications/m/item/draft-landscape-of-covid-19-candidate-vaccines">WHO’s landscape of COVID-19 vaccine candidates </a> for the latest information on vaccines in clinical and pre-clinical development, generally updated twice a week.<a href="https://covid19.who.int/">WHO’s COVID-19 dashboard </a>, updated daily, also features the number of vaccine doses administered globally. \n \nBut it’s not vaccines that will stop the pandemic, it’s vaccination. We must ensure fair and equitable access to vaccines, and ensure every country receives them and can roll them out to protect their people, starting with the most vulnerable.</string>
    <string name="about_app">The most powerful and integrated COVID-19 vaccine information and the latest developments on the Internet with a wide network of information that is registered on the World Health Organization (WHO) website. Its popularity among users is determined by its success rate which we will see in the initiative (The Chance) </string>
    <string name="bareq">manager in charge :\n Bareq AL-Taamah 😇</string>
    <string name="vaccine_information">Vaccine information</string>
    <string name="mohammed_maher">Mohammed Maher 🍒</string>
    <string name="karrar_jabbar">Karrar Jabbar 🍒</string>
    <string name="ruqaya_nia_ma">Ruqaya Nia\'ma 🍒</string>
    <string name="zainab_mahmood">Zainab Mahmood 🍒</string>
    <string name="shahlaa_haider">Shahlaa Haider 🍒</string>
    <string name="tamara_mouneer">Tamara Mouneer 🍒</string>
    <string name="team_leader">Team Leader</string>
    <string name="team_member">Team Member</string>
    <string name="istapraq_ahmed">Istapraq Ahmed 🍒</string>
    <string name="covid_19_virus_reasons">Covid 19 Virus Reasons</string>
    <string name="the_virus_is_airborne">The virus is airborne</string>
    <string name="move_by_handshake">Move by handshake</string>
    <string name="the_virus_is_transmitted_by_personal_contact">The virus is transmitted by personal contact</string>
    <string name="transmitted_by_touching_surfaces">transmitted by touching surfaces</string>
    <string name="eating_fruit_without_cleaning_it">Eating fruit without cleaning it</string>
    <string name="touch_street_animals">touch street animals</string>
    <string name="coronavirus_pandemic_covid_19">Coronavirus Pandemic (COVID-19)</string>

    <string name="people_vaccine">of the world population has received at least one dose of a COVID-19 vaccine</string>
    <string name="fully_vaccine">is fully vaccinated.</string>
    <string name="total_vaccine">is total vaccinated.</string>
    <string name="people_may_be_sick_with_the_virus_for_1_to_14_days_before_developing_any_symptoms">People may be sick with the virus for 1 to 14 days before developing any symptoms.</string>
    <string name="there_s_currently_no_vaccine_guaranteed_to_prevent_this_disease_you_can_protect_yourself_and_help_prevent_spreading_the_virus_if_you">There\'s currently no vaccine guaranteed to prevent this disease. You can protect yourself and help prevent spreading the virus if you:</string>
    <string name="stay_home">Stay Home</string>
    <string name="use_mask">Use Mask</string>
    <string name="social_distancing">Social Distancing</string>
    <string name="use_wash">Use Wash</string>
    <string name="hand_sanitizer">Hand Sanitizer</string>
    <string name="protection">Protection</string>
    <string name="corona">Corona</string>
    <string name="what_do_you_know_about_covid_19">What do you know about covid 19?</string>
    <string name="symptoms">Symptoms</string>
    <string name="top_5_country_vaccine">Top 5 Country Vaccine</string>
    <string name="country">Country</string>
    <string name="what_country_do_you_want_to_search_for">What country do you want to search for ?!</string>
</resources>