<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <TextView
        android:id="@+id/title_protection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/protection"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_protection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingHorizontal="30dp"
        android:text="@string/there_s_currently_no_vaccine_guaranteed_to_prevent_this_disease_you_can_protect_yourself_and_help_prevent_spreading_the_virus_if_you"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_protection" />

    <TextView
        android:id="@+id/txtProtection"
        style="@style/textViewParagraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:text="@string/stay_home"
        app:layout_constraintBottom_toBottomOf="@+id/imgProtection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideLine_right"
        app:layout_constraintStart_toEndOf="@+id/imgProtection"
        app:layout_constraintTop_toTopOf="@+id/imgProtection" />

    <TextView
        android:id="@+id/txtProtection2"
        style="@style/textViewParagraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/use_mask"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/imgProtection2"
        app:layout_constraintEnd_toStartOf="@+id/imgProtection2"
        app:layout_constraintStart_toEndOf="@+id/guideLine_left"
        app:layout_constraintTop_toTopOf="@+id/imgProtection2" />

    <TextView
        android:id="@+id/txtProtection3"
        style="@style/textViewParagraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:text="@string/social_distancing"
        app:layout_constraintBottom_toBottomOf="@+id/imgProtection3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideLine_right"
        app:layout_constraintStart_toEndOf="@+id/imgProtection3"
        app:layout_constraintTop_toTopOf="@+id/imgProtection3" />

    <TextView
        android:id="@+id/txtProtection4"
        style="@style/textViewParagraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/use_wash"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/imgProtection4"
        app:layout_constraintEnd_toStartOf="@+id/imgProtection4"
        app:layout_constraintStart_toEndOf="@+id/guideLine_left"
        app:layout_constraintTop_toTopOf="@+id/imgProtection4" />

    <TextView
        android:id="@+id/txtProtection5"
        style="@style/textViewParagraph"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:text="@string/hand_sanitizer"
        app:layout_constraintBottom_toBottomOf="@+id/imgProtection5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideLine_right"
        app:layout_constraintStart_toEndOf="@+id/imgProtection5"
        app:layout_constraintTop_toTopOf="@+id/imgProtection5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProtection"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:src="@drawable/ic_stay_home"
        app:layout_constraintEnd_toStartOf="@+id/txtProtection"
        app:layout_constraintStart_toEndOf="@+id/guideLine_left"
        app:layout_constraintTop_toBottomOf="@+id/text_protection"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProtection2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="12dp"
        android:src="@drawable/ic_mask"
        app:layout_constraintEnd_toStartOf="@+id/guideLine_right"
        app:layout_constraintStart_toEndOf="@+id/txtProtection2"
        app:layout_constraintTop_toBottomOf="@+id/imgProtection"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProtection3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="12dp"
        android:src="@drawable/ic_social_distancing"
        app:layout_constraintEnd_toStartOf="@+id/txtProtection3"
        app:layout_constraintStart_toEndOf="@+id/guideLine_left"
        app:layout_constraintTop_toBottomOf="@+id/imgProtection2"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProtection4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="12dp"
        android:src="@drawable/ic_wash"
        app:layout_constraintEnd_toStartOf="@+id/guideLine_right"
        app:layout_constraintStart_toEndOf="@+id/txtProtection4"
        app:layout_constraintTop_toBottomOf="@+id/imgProtection3"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgProtection5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="12dp"
        android:src="@drawable/ic_hand_sanitizer"
        app:layout_constraintEnd_toStartOf="@+id/txtProtection5"
        app:layout_constraintStart_toEndOf="@+id/guideLine_left"
        app:layout_constraintTop_toBottomOf="@+id/imgProtection4"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

</androidx.constraintlayout.widget.ConstraintLayout>