<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    tools:context=".fragments.fragmentHomePage.VaccineInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/distance_52">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#cce5f1"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/waveimg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/distance_300"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_wave_bg_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/distanceVerySmall"
            android:layout_marginTop="@dimen/distanceLarge"
            android:layout_marginEnd="@dimen/distanceVerySmall"
            android:src="@drawable/ic_vaksinasi"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titletv"
            style="@style/textViewTitle"
            android:layout_marginTop="@dimen/distance_130"
            android:text="@string/vaccine_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/waveimg" />

        <TextView
            android:id="@+id/infoph1tv"
            style="@style/textViewParagraph"
            android:text="@string/Paragraph1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titletv" />

        <TextView
            android:id="@+id/infoph2tv"
            style="@style/textViewParagraph"
            android:text="@string/Paragraph2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoph1tv" />

        <TextView
            android:id="@+id/infoph3tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/distance_0"
            android:layout_marginStart="@dimen/distanceVerySmall"
            android:layout_marginTop="@dimen/distance_28"
            android:layout_marginEnd="@dimen/distanceVerySmall"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="@dimen/distance_4"
            android:text="@string/Paragraph3"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#160E2C"
            android:textSize="@dimen/textSizeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoph2tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>