<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cce5f1">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_covid_19_vaccine"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:lottie_rawRes="@raw/attacktoworldwide"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:src="@drawable/setofcovid"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/setofcovid"
        app:layout_constraintBottom_toBottomOf="@+id/lottie_covid_19_vaccine"
        app:layout_constraintEnd_toEndOf="@+id/lottie_covid_19_vaccine" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/covid_19_virus_reasons"
        style="@style/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_covid_19_vaccine" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:text="@string/the_virus_is_airborne"
            android:textSize="16sp"
            android:textColor="#160E2C" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/airbornn" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:text="@string/move_by_handshake"
            android:textSize="16sp"
            android:textColor="#160E2C"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/shakehands" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/the_virus_is_transmitted_by_personal_contact"
            android:textSize="16sp"
            android:textColor="#160E2C" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:src="@drawable/contact" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/transmitted_by_touching_surfaces"
            android:textSize="16sp"
            android:textColor="#160E2C" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp"
            android:src="@drawable/touchserf" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/eating_fruit_without_cleaning_it"
            android:textSize="16sp"
            android:textColor="#160E2C" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_berry" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_covid20"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_covid20"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_covid20"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:elevation="8dp"
        app:cardCornerRadius="20dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/touch_street_animals"
            android:textSize="16sp"
            android:textColor="#160E2C"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:src="@drawable/animals" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>